<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GogakuDroid</string>
    <string name="title_activity_main">GogakuDroid</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="hello_world">Select course and push download button.</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="privacy">Privacy Policy</string>
    <string name="settings">Settings...</string>
    <string name="skip_file">Skip if exist</string>
    <string name="skip_file_desc">Skip files if already exists</string>
    <string name="overwrite_bin">Overwrite binary</string>
    <string name="overwrite_bin_desc">Overwrite binary on each time started</string>
    <string name="wake_lock">Use wake lock</string>
    <string name="wake_lock_desc">Don\'t sleep until finish download</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Select visual theme</string>
    <string name="type">File type</string>
    <string name="type_desc">Select output file type</string>
    <string name="close">Close</string>
    <string name="downloading">Downloading...</string>
    <string name="started">Download started.</string>
    <string name="finished">Download finished.</string>
    <string name="failed">Download failed.</string>
    <string name="cancelled">Download cancelled.</string>
    <string name="skipped">Skipped files.</string>
    <string name="init_error">Initialize error.</string>
    <string name="conn_error">Network connection error.</string>
    <string name="parse_error">XML parse error.</string>
    <string name="permission_denied">Storage permission denied. Cannot download.</string>
    <string name="no_downloads">No downloads.</string>
    <string name="clear_list">Clear</string>
    <string name="play">Play</string>
    <string name="tab_courses">Courses</string>
    <string name="tab_download">Download</string>
    <string name="status_waiting">Waiting</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_completed">Completed</string>
    <string name="status_failed">Failed</string>
    <string name="status_skipped">Skipped</string>

    <string-array name="theme">
        <item>Dark</item>
        <item>Light</item>
        <item>Light with Dark ActionBar</item>
    </string-array>
    <string-array name="theme_value">
        <item>Theme.Holo</item>
        <item>Theme.Holo.Light</item>
        <item>AppBaseTheme</item>
    </string-array>

    <string-array name="type">
        <item>3g2</item>
        <item>3gp</item>
        <item>aac</item>
        <item>m4a</item>
        <item>mp3</item>
    </string-array>
    <string-array name="type_value">
        <item>3g2</item>
        <item>3gp</item>
        <item>aac</item>
        <item>m4a</item>
        <item>mp3</item>
    </string-array>

</resources>
